<resources>
    <string name="app_name">KLauncher</string>
    <string name="action_settings">Settings</string>
    <string name="source">Source</string>
    <string name="application_manager">Application Manager</string>
    <string name="application_center">All Apps</string>
    <string name="brower">Browser</string>
    <string name="calendar">Calendar</string>
    <string name="email">E-mail</string>
    <string name="apkinstall">APK Install</string>
    <string name="multimedia">Multimedia</string>
    <string name="settings">Settings</string>
    <string name="tv">Back to TV</string>
    <string name="replace">Replace</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="hint">System Reserve</string>
    <string name="check_update">Check for updates</string>
    <string name="new_version_text">Discovery of new version,Whether to update?</string>
    <string name="skip_this_version">Skip</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="checking_version">Getting the latest version information...</string>
    <string name="latest_version">Your software is the latest version!</string>
    <string name="get_version_failed">Failed to get version information!</string>
    <string name="downloading_package">Downloading the installation package...</string>
    <string name="download_install">Download and install</string>
    <string name="download_failed">Download failed!</string>
    <string-array name="week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="month">
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Apr.</item>
        <item>May</item>
        <item>Jun.</item>
        <item>Jul.</item>
        <item>Aug.</item>
        <item>Sept.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>
    <string name="def_time">08 00</string>
    <string name="time_colon">:</string>
    <string name="time_am">am</string>
    <string name="time_pm">pm</string>
    <string name="def_date">1st Jan.\nMonday</string>
     <string name="aiqiyi_title">这个是视频标题</string>
</resources>