<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rl_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- 网络状态 -->

        <ImageView
            android:id="@+id/topbar_net_status"
            android:layout_width="@dimen/ktc_0030"
            android:layout_height="@dimen/ktc_0030"
            android:layout_marginLeft="@dimen/ktc_1040"
            android:layout_marginTop="@dimen/ktc_0012"
            android:src="@drawable/com_status_unlink" />
        <!-- usb状态 -->

        <ImageView
            android:id="@+id/topbar_usb_status"
            android:layout_width="@dimen/ktc_0030"
            android:layout_height="@dimen/ktc_0030"
            android:layout_marginLeft="@dimen/ktc_0960"
            android:layout_marginTop="@dimen/ktc_0010"
            android:src="@drawable/ic_usb_status"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ktc_0050"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/ktc_1080"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

              <!-- 时间 -->
                <TextView
                    android:id="@+id/time_am_zh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_am"
                    android:textColor="#ff999999"
                    android:textSize="@dimen/ktc_0020"
                    android:visibility="gone" />
            
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/tv_main_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/def_time"
                    android:textSize="@dimen/ktc_0030"
                    android:textStyle="normal" />
                <!-- 日期 -->

                <TextView
                    android:id="@+id/time_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:maxHeight="@dimen/ktc_0050"
                    android:text="@string/time_colon"
                    android:textColor="#ff999999"
                    android:textSize="@dimen/ktc_0030"
                    android:visibility="gone" />
            </RelativeLayout>
              <TextView
                    android:id="@+id/time_am"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_am"
                    android:textColor="#ff999999"
                    android:textSize="@dimen/ktc_0020"
                    android:visibility="gone" />
            <ImageView
                android:id="@+id/iv_main_line"
                android:layout_width="@dimen/ktc_0016"
                android:layout_height="@dimen/ktc_0032"
                android:src="@drawable/home_line" />

            <TextView
                android:id="@+id/tv_main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def_date"
                android:textSize="@dimen/ktc_0012" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" >

        <RelativeLayout
        android:layout_width="@dimen/ktc_0832"
        android:layout_height="@dimen/ktc_0412"
       
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:addStatesFromChildren="true"
        android:focusable="false"
        android:background="@drawable/common_item_rect_selector" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_aiqiyi"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </android.support.v4.view.ViewPager>

        <RelativeLayout
            android:id="@+id/ll_text_and_indicator"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:focusable="false"
            android:layout_alignParentBottom="true"
            android:background="#AA000000" >

            <TextView
                android:id="@+id/aiqiyi_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/aiqiyi_title"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" >

                 <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="10dip"
                    app:fillColor="#fff1f1f1"
                    app:pageColor="#ff616161"
                    app:radius="5dp"
                    app:strokeColor="#FF000000"
                    app:strokeWidth="2dp" /> 
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ktc_0460"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/app_fl_1"
                android:layout_width="@dimen/ktc_0200"
                android:layout_height="@dimen/ktc_0200" >

                <ImageView
                    android:id="@+id/app_bg_1"
                    android:layout_width="@dimen/ktc_0200"
                    android:layout_height="@dimen/ktc_0180"
                    android:scaleType="centerInside"
                    android:visibility="visible" />

                <com.ktc.launcher.ui.AppWidget
                    android:id="@+id/app_iv_1"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0010"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_iv_3"
                    android:clickable="true"
                    android:focusable="true"
                    android:nextFocusRight="@+id/app_iv_2"
                    android:nextFocusUp="@id/viewpager_aiqiyi"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/app_re_1"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0010"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_view_selector"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="@dimen/ktc_0004"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ktc_textSize_20"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/app_fl_2"
                android:layout_width="@dimen/ktc_0200"
                android:layout_height="@dimen/ktc_0180" >

                <ImageView
                    android:id="@+id/app_bg_2"
                    android:layout_width="@dimen/ktc_0200"
                    android:layout_height="@dimen/ktc_0180"
                    android:scaleType="centerInside"
                    android:visibility="visible" />

                <com.ktc.launcher.ui.AppWidget
                    android:id="@+id/app_iv_2"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0010"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_iv_4"
                    android:clickable="true"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/app_iv_1"
                    android:nextFocusRight="@+id/app_iv_3"
                    android:nextFocusUp="@id/viewpager_aiqiyi"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/app_re_2"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0010"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_view_selector"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="@dimen/ktc_0004"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ktc_textSize_20"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/app_fl_3"
                android:layout_width="@dimen/ktc_0200"
                android:layout_height="@dimen/ktc_0180" >

                <ImageView
                    android:id="@+id/app_bg_3"
                    android:layout_width="@dimen/ktc_0200"
                    android:layout_height="@dimen/ktc_0180"
                    android:scaleType="centerInside"
                    android:visibility="visible" />

                <com.ktc.launcher.ui.AppWidget
                    android:id="@+id/app_iv_3"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0012"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_iv_1"
                    android:clickable="true"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/app_iv_2"
                    android:nextFocusRight="@+id/app_iv_4"
                    android:nextFocusUp="@id/viewpager_aiqiyi"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/app_re_3"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0012"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_view_selector"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="@dimen/ktc_0004"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ktc_textSize_20"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/app_fl_4"
                android:layout_width="@dimen/ktc_0200"
                android:layout_height="@dimen/ktc_0180" >

                <ImageView
                    android:id="@+id/app_bg_4"
                    android:layout_width="@dimen/ktc_0200"
                    android:layout_height="@dimen/ktc_0180"
                    android:scaleType="centerInside"
                    android:visibility="visible" />

                <com.ktc.launcher.ui.AppWidget
                    android:id="@+id/app_iv_4"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0012"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_iv_2"
                    android:clickable="true"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/app_iv_3"
                    android:nextFocusUp="@id/viewpager_aiqiyi"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/app_re_4"
                    android:layout_width="@dimen/ktc_0176"
                    android:layout_height="@dimen/ktc_0158"
                    android:layout_marginLeft="@dimen/ktc_0012"
                    android:layout_marginTop="@dimen/ktc_0012"
                    android:background="@drawable/app_view_selector"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="@dimen/ktc_0004"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ktc_textSize_20"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>